--- a/css/global.scss
+++ b/css/global.scss
@@ -306,7 +306,7 @@ a{
   &__container-image {
     flex: 0 1 45%;
     background: 
-      url(/asset/images/coldbrewbackground.png) center center no-repeat;
+      url(./asset/images/coldbrewbackground.png) center center no-repeat;
     position: absolute;
     width: 400px;
     height: 400px;
