--- a/css/global.css
+++ b/css/global.css
@@ -111,10 +111,10 @@ a {
   width: 30%;
   justify-content: space-evenly;
 }
-.primary-nav .primary-nav__item {
+.primary-nav__item {
   display: inline;
 }
-.primary-nav .primary-nav__item a {
+.primary-nav__item a {
   text-decoration: none;
   color: #393939;
 }
@@ -234,6 +234,7 @@ a {
   display: flex;
   flex-direction: column;
   max-width: 50%;
+  padding: 5rem;
 }
 .discount__text {
   display: inline-flexbox;
@@ -252,7 +253,7 @@ a {
   display: flex;
   flex-direction: row;
   width: 100%;
-  justify-content: center;
+  justify-content: space-between;
   gap: 1rem;
 }
 .discount__logo {
@@ -263,7 +264,7 @@ a {
 }
 .discount__container-image {
   flex: 0 1 45%;
-  background: url(./asset/images/coldbrewbackground.png) center center no-repeat;
+  background: url(/asset/images/coldbrewbackground.png) center center no-repeat;
   position: absolute;
   width: 400px;
   height: 400px;
@@ -305,6 +306,17 @@ a {
   justify-content: center;
   gap: 10rem;
   padding: 5rem;
+}
+.footer__logo {
+  display: flex;
+  align-items: flex-start;
+  padding: 0%;
+  margin: 0;
+  width: 10rem;
+  height: 10rem;
+  opacity: 50%;
+  position: relative;
+  left: 0%;
 }
 
 .footer__list-item {
