--- a/scss/landing.css
+++ b/scss/landing.css
@@ -1,3 +1,15 @@
+h1, h2 {
+  font-weight: 300;
+  font-size: 60px;
+}
+
+body {
+  font-family: "Open Sans";
+  font-weight: 400;
+  background-color: white;
+  margin: 0;
+}
+
 @keyframes rotate {
   from {
     transform: rotate(0deg);
