fix link, html validator and nesting

--- a/scss/partials/_global.scss
+++ b/scss/partials/_global.scss
@@ -9,3 +9,10 @@ body {
     background-color: white;
     margin: 0;
 }
+
+// color-variables
+$neutral-black:#393939;
+$neutral-grey:#909090;
+$light-grey:#F7F7F7;
+$primary-pink: #fff0ed;
+$primary-blue:#5bacc3;
