--- a/scss/landing.css
+++ b/scss/landing.css
@@ -29,12 +29,12 @@ body {
 }
 h1, h2 {
   font-weight: 300;
-  font-size: 60px;
+  font-size: 3.75rem;
 }
 
 h3 {
   font-weight: 300;
-  font-size: 33px;
+  font-size: 2.0625rem;
 }
 
 p {
@@ -46,6 +46,7 @@ body {
   font-weight: 400;
   color: #393939;
   margin: 0;
+  overflow-x: hidden;
 }
 
 a {
@@ -56,11 +57,9 @@ a {
 .default-button {
   background: transparent;
   color: white;
-  font-style: none;
-  text-decoration: none;
-  padding: 20px;
-  margin: 20px;
-  width: 180px;
+  padding: 1.25rem;
+  margin: 1.25rem;
+  width: 11.25rem;
   height: 3rem;
   font-size: 1rem;
   position: relative;
@@ -71,23 +70,21 @@ a {
   border: none;
   background-color: #5bacc3;
 }
-
 .default-button::before {
   content: "";
   position: absolute;
   width: 100%;
   height: 100%;
-  border: 2px solid black; /* Border properties */
+  border: 0.125rem solid black;
   z-index: -1;
   pointer-events: none;
-  transform: translate(-5px, -5px);
+  transform: translate(-0.3125rem, -0.3125rem);
 }
-
 .default-button:active {
-  transform: translate(10px, 10px);
+  transform: translate(0.625rem, 0.625rem);
 }
 .default-button:active::before {
-  transform: translate(0px, 0px);
+  transform: translate(0);
 }
 
 .primary-nav {
@@ -255,8 +252,7 @@ a {
   font-weight: 300;
   font-size: 3.125rem;
   color: white;
-  font-weight: 400;
-  margin-block-start: 0em;
+  margin-block-start: 0;
   padding: 2rem;
   width: 90%;
   animation: flash 2.5s linear infinite;
@@ -269,8 +265,8 @@ a {
   gap: 1rem;
 }
 .discount__logo {
-  width: 50px;
-  height: 50px;
+  width: 3.125rem;
+  height: 3.125rem;
   max-width: 100%;
   max-height: 100%;
 }
@@ -278,8 +274,8 @@ a {
   flex: 0 1 45%;
   background: url(/asset/images/coldbrewbackground.png) center center no-repeat;
   position: absolute;
-  width: 400px;
-  height: 400px;
+  width: 25rem;
+  height: 25rem;
   background-size: cover;
   left: 60%;
   display: flex;
@@ -303,8 +299,8 @@ a {
 .discount #image-box {
   position: absolute;
   border: 0.5rem solid #5bacc3;
-  width: 400px;
-  height: 400px;
+  width: 25rem;
+  height: 25rem;
   bottom: 3%;
   right: 3%;
   z-index: 1;
@@ -322,32 +318,28 @@ a {
 .footer__logo {
   display: flex;
   align-items: flex-start;
-  padding: 0%;
+  padding: 0;
   margin: 0;
   width: 10rem;
   height: 10rem;
   opacity: 50%;
   position: relative;
-  left: 0%;
+  left: 0;
 }
-
 .footer__list-item {
   color: #393939;
   font-weight: 400;
   font-size: 2rem;
-  margin: 0%;
+  margin: 0;
 }
-
 .footer__item-detail {
   font-size: 1.25rem;
   font-weight: 400;
 }
-
-.nav-footer__logo {
-  width: 50px;
+.footer .nav-footer__logo {
+  width: 3.125rem;
   margin-top: 1rem;
 }
-
-.date {
+.footer .date {
   font-weight: bold;
 }/*# sourceMappingURL=landing.css.map */
