--- a/scss/landing.scss
+++ b/scss/landing.scss
@@ -12,7 +12,6 @@
 
 @keyframes flash {
   0%, 100% {
-    // color: #393939;
     opacity: 1;
   }
   50% {
@@ -21,14 +20,14 @@
   }
 }
 
-h1, h2{
+h1, h2 {
   font-weight: 300;
-  font-size: 60px;
+  font-size: 3.75rem; // 60px
 }
 
-h3{
+h3 {
   font-weight: 300;
-  font-size: 33px;
+  font-size: 2.0625rem; // 33px
 }
 
 p {
@@ -40,24 +39,21 @@ body {
   font-weight: 400;
   color: #393939;
   margin: 0;
+  overflow-x: hidden; // Disable sideways scrolling
 }
 
-a{
+a {
   text-decoration: none;
   font-style: none;
 }
 
-// button design
+// Button design
 .default-button {
   background: transparent;
-  // box-shadow: 5px 5px 2px 1px $primary-blue;
   color: white;
-  // border: 3px solid black;
-  font-style: none;
-  text-decoration: none;
-  padding: 20px;
-  margin: 20px;
-  width: 180px;
+  padding: 1.25rem; // 20px
+  margin: 1.25rem; // 20px
+  width: 11.25rem; // 180px
   height: 3rem;
   font-size: 1rem;
   position: relative;
@@ -67,33 +63,31 @@ a{
   z-index: 0;
   border: none;
   background-color: $primary-blue;
-}
 
-.default-button::before {
-  content: '';
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  border: 2px solid black; /* Border properties */
-  z-index: -1;
-  pointer-events: none;
-  transform: translate(-5px, -5px);
-}
+  &::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border: 0.125rem solid black; // 2px
+    z-index: -1;
+    pointer-events: none;
+    transform: translate(-0.3125rem, -0.3125rem); // -5px
+  }
 
-
-.default-button:active{
-  transform: translate(10px, 10px);
-  &::before{
-    transform: translate(0px, 0px);
+  &:active {
+    transform: translate(0.625rem, 0.625rem); // 10px
+    &::before {
+      transform: translate(0);
+    }
   }
 }
 
-.primary-nav{
+.primary-nav {
   background-color: $primary-pink;
-  display: flex; 
+  display: flex;
   align-items: center;
   justify-content: space-between;
-  
 
   :nth-child(0) {
     align-self: flex-start;
@@ -103,23 +97,23 @@ a{
     align-self: flex-end;
   }
 
-  &__head{
+  &__head {
     display: flex;
     flex-direction: row;
   }
 
-  &__logo{
-  height: auto;
-  max-height: 100%;
-  margin-bottom: 6.5rem;
-  justify-content: center;
+  &__logo {
+    height: auto;
+    max-height: 100%;
+    margin-bottom: 6.5rem;
+    justify-content: center;
   }
 
   &__header {
     height: 2em;
     line-height: 1;
   }
-  
+
   &__list {
     list-style-type: none;
     font-size: 1rem;
@@ -127,24 +121,24 @@ a{
     width: 30%;
     justify-content: space-evenly;
   }
-  
+
   &__item {
     display: inline;
   }
-  
+
   &__item a {
     text-decoration: none;
     color: #393939;
   }
-  
-  #primary-nav__item--highlight{
+
+  #primary-nav__item--highlight {
     text-decoration: none;
     color: #5bacc3;
   }
 }
 
 .banner {
-  background-color:$primary-pink;
+  background-color: $primary-pink;
   font-weight: 400;
   font-size: 1.25rem;
   color: #393939;
@@ -157,9 +151,7 @@ a{
     display: flex;
     flex-direction: column;
   }
-
 }
-
 
 .product {
   background-color: #f7f7f7;
@@ -190,11 +182,11 @@ a{
     width: 20.625rem;
     border-radius: 0.625rem;
     display: flex;
-    justify-content:space-between;
+    justify-content: space-between;
     align-items: center;
     flex-direction: column;
 
-    &__info{
+    &__info {
       display: flex;
       background-color: $primary-pink;
       align-items: center;
@@ -211,12 +203,12 @@ a{
       }
     }
 
-    &__text{
+    &__text {
       align-items: center;
       margin: 1em;
     }
 
-    &__image__container{
+    &__image__container {
       position: relative;
     }
 
@@ -225,7 +217,7 @@ a{
       font-size: 2rem;
       color: #393939;
       margin: 1.5rem 0 0 0;
-    }  
+    }
 
     &__price {
       color: #5bacc3;
@@ -235,7 +227,7 @@ a{
       margin: auto;
     }
 
-    &__quantity{
+    &__quantity {
       color: $neutral-grey;
       font-size: 1rem;
       margin: 0 0 1.5rem 0;
@@ -243,7 +235,7 @@ a{
   }
 }
 
-.discount{
+.discount {
   background-color: white;
   font-weight: 400;
   font-size: 1.25rem;
@@ -255,7 +247,7 @@ a{
   justify-content: center;
   position: relative;
 
-  &__sub{
+  &__sub {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -270,21 +262,20 @@ a{
     padding: 5rem;
   }
 
-  &__text{
+  &__text {
     display: inline-flexbox;
     background-color: #393939;
     text-align: center;
     font-weight: 300;
     font-size: 3.125rem;
     color: white;
-    font-weight: 400;
-    margin-block-start: 0em;
+    margin-block-start: 0;
     padding: 2rem;
     width: 90%;
     animation: flash 2.5s linear infinite;
   }
 
-  &__logo-container{
+  &__logo-container {
     display: flex;
     flex-direction: row;
     width: 100%;
@@ -292,27 +283,25 @@ a{
     gap: 1rem;
   }
 
-
-  &__logo{
-    width: 50px;
-    height: 50px;
-    max-width: 100%; 
+  &__logo {
+    width: 3.125rem; // 50px
+    height: 3.125rem; // 50px
+    max-width: 100%;
     max-height: 100%;
   }
 
   &__container-image {
     flex: 0 1 45%;
-    background: 
-      url(/asset/images/coldbrewbackground.png) center center no-repeat;
+    background: url(/asset/images/coldbrewbackground.png) center center no-repeat;
     position: absolute;
-    width: 400px;
-    height: 400px;
+    width: 25rem; // 400px
+    height: 25rem; // 400px
     background-size: cover;
     left: 60%;
     display: flex;
   }
 
-  .rotating-can-container{
+  .rotating-can-container {
     width: 100%;
     height: 100%;
     display: flex;
@@ -325,17 +314,17 @@ a{
       z-index: 2;
     }
 
-    #rotating-can:hover{
+    #rotating-can:hover {
       animation: rotate 2s linear;
       animation-iteration-count: infinite;
     }
   }
 
-  #image-box{
+  #image-box {
     position: absolute;
     border: 0.5rem solid $primary-blue;
-    width: 400px;
-    height: 400px;
+    width: 25rem; // 400px
+    height: 25rem; // 400px
     bottom: 3%;
     right: 3%;
     z-index: 1;
@@ -351,36 +340,36 @@ a{
   gap: 10rem;
   padding: 5rem;
 
-  &__logo{
+  &__logo {
     display: flex;
     align-items: flex-start;
-    padding: 0%;
+    padding: 0;
     margin: 0;
     width: 10rem;
     height: 10rem;
     opacity: 50%;
     position: relative;
-    left: 0%;
+    left: 0;
   }
-}
 
-.footer__list-item {
-  color: #393939;
-  font-weight: 400;
-  font-size: 2rem;
-  margin: 0%;
-}
+  &__list-item {
+    color: #393939;
+    font-weight: 400;
+    font-size: 2rem;
+    margin: 0;
+  }
 
-.footer__item-detail {
-  font-size: 1.25rem;
-  font-weight: 400;
-}
+  &__item-detail {
+    font-size: 1.25rem;
+    font-weight: 400;
+  }
 
-.nav-footer__logo {
-  width: 50px;
-  margin-top: 1rem;
-}
+  .nav-footer__logo {
+    width: 3.125rem; // 50px
+    margin-top: 1rem;
+  }
 
-.date {
-  font-weight: bold;
+  .date {
+    font-weight: bold;
+  }
 }
